oneplus-common: ConfigPanel: Rebrand to MoKee completely
Change-Id: I7d090816104e0e7ea8634bb96c248de43515af20

--- a/overlay/mokee-sdk/mk/res/res/values/config.xml
+++ b/overlay/mokee-sdk/mk/res/res/values/config.xml
@@ -28,7 +28,7 @@
     <!-- Names of the key handler classes -->
     <string-array name="config_deviceKeyHandlerClasses" translatable="false">
         <item>org.mokee.mkparts.gestures.KeyHandler</item>
-        <item>com.cyanogenmod.settings.device.KeyHandler</item>
+        <item>org.mokee.settings.device.KeyHandler</item>
     </string-array>
 
 </resources>
